kubernetes/clusters/hyperion/seaweedfs/components/ingress/ingress-aritrosinha.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seaweedfs-master-aritrosinha
  namespace: storage
  labels:
    backuplabel.certificate: "true"
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - "seaweedfs.hyperion.aritrosinha.dpdns.org"
      secretName: seaweedfs-master-aritrosinha-tls
  rules:
    - host: "seaweedfs.hyperion.aritrosinha.dpdns.org"
      http:
        paths:
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: seaweedfs-admin
                port:
                  number: 23646
          - path: /filer
            pathType: Prefix
            backend:
              service:
                name: seaweedfs-filer
                port:
                  number: 8888
          - path: /volume
            pathType: Prefix
            backend:
              service:
                name: seaweedfs-volume
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seaweedfs-master
                port:
                  number: 9333
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seaweedfs-filer-aritrosinha
  namespace: storage
  labels:
    backuplabel.certificate: "true"
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    link.argocd.argoproj.io/external-link: "https://filer.seaweedfs.hyperion.aritrosinha.dpdns.org/"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - "filer.seaweedfs.hyperion.aritrosinha.dpdns.org"
      secretName: seaweedfs-filer-aritrosinha-tls
  rules:
    - host: "filer.seaweedfs.hyperion.aritrosinha.dpdns.org"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seaweedfs-filer
                port:
                  number: 8888
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seaweedfs-s3-aritrosinha
  namespace: storage
  labels:
    backuplabel.certificate: "true"
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - "s3.seaweedfs.hyperion.aritrosinha.dpdns.org"
      secretName: seaweedfs-s3-aritrosinha-tls
  rules:
    - host: "s3.seaweedfs.hyperion.aritrosinha.dpdns.org"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seaweedfs-s3
                port:
                  number: 8333
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seaweedfs-admin-aritrosinha
  namespace: storage
  labels:
    backuplabel.certificate: "true"
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    link.argocd.argoproj.io/external-link: "https://admin.seaweedfs.hyperion.aritrosinha.dpdns.org/"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - "admin.seaweedfs.hyperion.aritrosinha.dpdns.org"
      secretName: seaweedfs-admin-aritrosinha-tls
  rules:
    - host: "admin.seaweedfs.hyperion.aritrosinha.dpdns.org"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seaweedfs-admin
                port:
                  number: 23646
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seaweedfs-volume-aritrosinha
  namespace: storage
  labels:
    backuplabel.certificate: "true"
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - "volume.seaweedfs.hyperion.aritrosinha.dpdns.org"
      secretName: seaweedfs-volume-aritrosinha-tls
  rules:
    - host: "volume.seaweedfs.hyperion.aritrosinha.dpdns.org"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seaweedfs-volume
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seaweedfs-webdav-aritrosinha
  namespace: storage
  labels:
    backuplabel.certificate: "true"
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    link.argocd.argoproj.io/external-link: "https://webdav.seaweedfs.hyperion.aritrosinha.dpdns.org/"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - "webdav.seaweedfs.hyperion.aritrosinha.dpdns.org"
      secretName: seaweedfs-webdav-aritrosinha-tls
  rules:
    - host: "webdav.seaweedfs.hyperion.aritrosinha.dpdns.org"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seaweedfs-webdav
                port:
                  number: 7333
