kubernetes/clusters/hyperion/seaweedfs/components/ingress/ingress-strawslabs.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seaweedfs-master-strawslabs
  namespace: storage
  labels:
    backuplabel.certificate: "true"
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - "seaweedfs-hyperion.strawslabs.com"
      secretName: seaweedfs-master-strawslabs-tls
  rules:
    - host: "seaweedfs-hyperion.strawslabs.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seaweedfs-master
                port:
                  number: 9333
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seaweedfs-filer-strawslabs
  namespace: storage
  labels:
    backuplabel.certificate: "true"
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    # link.argocd.argoproj.io/external-link: "https://filer.seaweedfs-hyperion.strawslabs.com/"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - "filer.seaweedfs-hyperion.strawslabs.com"
      secretName: seaweedfs-filer-strawslabs-tls
  rules:
    - host: "filer.seaweedfs-hyperion.strawslabs.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seaweedfs-filer
                port:
                  number: 8888
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seaweedfs-s3-strawslabs
  namespace: storage
  labels:
    backuplabel.certificate: "true"
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - "s3.seaweedfs-hyperion.strawslabs.com"
      secretName: seaweedfs-s3-strawslabs-tls
  rules:
    - host: "s3.seaweedfs-hyperion.strawslabs.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seaweedfs-s3
                port:
                  number: 8333
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seaweedfs-admin-strawslabs
  namespace: storage
  labels:
    backuplabel.certificate: "true"
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    # link.argocd.argoproj.io/external-link: "https://admin.seaweedfs-hyperion.strawslabs.com/"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - "admin.seaweedfs-hyperion.strawslabs.com"
      secretName: seaweedfs-admin-strawslabs-tls
  rules:
    - host: "admin.seaweedfs-hyperion.strawslabs.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seaweedfs-admin
                port:
                  number: 23646
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seaweedfs-volume-strawslabs
  namespace: storage
  labels:
    backuplabel.certificate: "true"
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - "volume.seaweedfs-hyperion.strawslabs.com"
      secretName: seaweedfs-volume-strawslabs-tls
  rules:
    - host: "volume.seaweedfs-hyperion.strawslabs.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seaweedfs-volume
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seaweedfs-webdav-strawslabs
  namespace: storage
  labels:
    backuplabel.certificate: "true"
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    link.argocd.argoproj.io/external-link: "https://webdav.seaweedfs-hyperion.strawslabs.com/"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - "webdav.seaweedfs-hyperion.strawslabs.com"
      secretName: seaweedfs-webdav-strawslabs-tls
  rules:
    - host: "webdav.seaweedfs-hyperion.strawslabs.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seaweedfs-webdav
                port:
                  number: 7333
